refactor(pacer): consolidate worker candidate matching